# lightboard-controls

./: .gitignore  CMakeLists.txt  Makefile  README.md
lib/: clone_libs.sh
src/: controller.cpp  controller.h  input.cpp  input.h  main.cpp
src/graphing/: functions.cpp  functions.h  graphs.cpp  graphs.h
src/modes/: modes.h  rainbowcycle.cpp  sleep.cpp
src/util/: colors.h
